components/MenuList/MenuList.module.scss
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;800;900&display=swap");

.menuGeneral {
   font-family: Nunito;
   background-color: #222327;

   .fixedMenu {
      font-size: larger;

      /* Hiding scrollbars */
      -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
      scrollbar-width: none; /* Hide scrollbar for Firefox */
      &::-webkit-scrollbar {
         display: none; /* Hide scrollbar for Chrome, Safari and Opera */
      }
   }

   .menuContent {
      scroll-behavior: smooth;
      height: 75vh;

      /* Hiding scrollbars */
      -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
      scrollbar-width: none; /* Hide scrollbar for Firefox */
      &::-webkit-scrollbar {
         display: none; /* Hide scrollbar for Chrome, Safari and Opera */
      }
   }
}

